# extractor

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  README_ZH.md  RssReader.py  alembic.ini  clear_table.py  main.py  pyproject.toml  pytest.ini  requirements.txt  rss_sources.json  t3.md  test.md
 docs/: 2-langgraph.md  3-ER.md  3-log.md
.cursor/rules/: do-not-add-example-guide.mdc  use-exception-rather-than-error.mdc
.github/workflows/: cicd-build.yml  cicd-migrate.yml
Tutorial/: 1-how-to-use-uv.md
config/: .gitignore  README.md  llm_pools.example.yaml
data/: rss_sources.json
docs/: 0-doc.md  4-migrate.md  5-Short-Text-Clustering.md
scripts/: print_graph.py
src/: .env.example  __init__.py  alembic.ini  app.py  main.py  sources.py  workflows.py
src/agents/: agent.py
src/config/: __init__.py  app_config.py
src/crawl/: __init__.py  anti_detect.py  crawl.py
src/graph/: __init__.py  _utils.py  classify_graph.py  deduplicate.py  graph.py  nodes.py  reporter.py  reporter_graph.py  score.py  state.py  tagger.py  types.py
src/llms/: __init__.py  factory.py  litellm_factory.py  ollama_client.py  pool_config_manager.py  pool_manager.py  siliconflow_client.py  unified_manager.py
src/migrate/: README.md  alembic.ini  env.py  script.py.mako
src/migrate/versions/: 2025_05_25_1145-fb27a9631c8b_rssfeeds_to_rss_feed_and_add_rss_entry.py  2025_05_25_1153-4ccf2ade5cf5_init.py  2025_05_25_1830-4270c6fdeddb_init.py  2025_05_26_1808-3658edde1232_rss_feed_add_unique_index.py  2025_05_27_1629-f582b4ea3cae_rename_feed_tags_to_entries_tags.py  2025_05_27_1647-47ba3cdb7085_add_entry_score.py  2025_05_28_1636-c66c45685abb_tags_to_category.py  2025_05_31_2135-23e4b8ab0758_score_table_adjust.py  2025_06_02_2343-e9d8b6cc5488_rename_entry_category.py  2025_06_02_2351-e70ae010566f_remove_entry_status.py  2025_06_03_0153-764248e1a5f7_add_entry_summary.py  2025_06_03_1506-6858dee2ac72_add_entry_summary.py  2025_06_07_0150-45248bba3fba_add_reason.py  2025_06_07_0249-3569afb6fff4_week_report.py  8f6f8fbc6e2b_init.py  bb794fcbecaf_init.py  da84b2e0fbf4_init.py
src/model/: siliconflow_client.py
src/models/: __init__.py  base.py  db.py  entry_summary.py  rss_entry.py  rss_feed.py  rss_feeds.py  score.py  tags.py  week_report.py
src/prompts/: deduplicator.md  prompts.py  scorer.md  scorer_business.md  scorer_experience.md  scorer_tech.md  tagger.md  tagger_review.md  templates.py
src/rss/: RssReader.py  __init__.py  rss_reader.py
src/source/: folo_sqlite.py
src/stores/: __init__.py  db.py
src/utils/: logger.py  time.py
test/: test_article_extractor.py  test_classify_graph.py  test_crawl.py
testdata/: .gitignore  batch-craw.sh
web/: package.json
