[project]
name = "extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "alembic>=1.16.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "bs4==0.0.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "crawl4ai>=0.6.3",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "feedparser==6.0.11",
    "frozenlist==1.6.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "jiter==0.10.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-core==0.3.61",
    "langchain-ollama==0.3.3",
    "langchain-openai==0.3.17",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.4.5",
    "langgraph-checkpoint==2.0.26",
    "langgraph-prebuilt==0.1.8",
    "langgraph-sdk==0.1.70",
    "langsmith==0.3.42",
    "marshmallow==3.26.1",
    "multidict==6.4.4",
    "mypy-extensions==1.1.0",
    "numpy==2.2.6",
    "ollama==0.4.8",
    "openai==1.81.0",
    "orjson==3.10.18",
    "ormsgpack==1.9.1",
    "packaging==24.2",
    "propcache==0.3.1",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "sgmllib3k==1.0.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "tqdm==4.67.1",
    "typing-extensions==4.13.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "urllib3==2.4.0",
    "xxhash==3.5.0",
    "yarl==1.20.0",
    "zstandard==0.23.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
pythonpath = [
    "."
]
asyncio_mode = "strict"

[tool.pyright]
# executionEnvironments = [
#     { root = "src" }
# ]