[project]
name = "extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.11.18",
    "alembic>=1.16.1",
    "annotated-types==0.7.0",
    "bertopic>=0.17.0",
    "black>=25.1.0",
    "crawl4ai>=0.6.3",
    "dotenv>=0.9.9",
    "feedparser==6.0.11",
    "html2text>=2025.4.15",
    "isort>=6.0.1",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-core==0.3.61",
    "langchain-ollama==0.3.3",
    "langchain-openai==0.3.17",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.4.5",
    "langgraph-checkpoint==2.0.26",
    "langgraph-prebuilt==0.1.8",
    "langgraph-sdk==0.1.70",
    "numpy==2.2.6",
    "openai==1.81.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "sqlalchemy==2.0.41",
    "typing-extensions==4.13.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[tool.alembic]
script_location = "%(here)s/src/migrate"
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
prepend_sys_path = ".:.."
path_separator = "os"
